[project]
name = "pyhealth"
version = "0.1.0"
description = "Python Project Health Analyzer — Comprehensive health scanning for Python projects: dependencies, code quality, security, tests, docs, and CI/CD"
readme = "README.md"
authors = [{ name = "jlaportebot", email = "jlaportebot@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "GitPython>=3.1",
    "bandit>=1.7",
    "pip-audit>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "ty>=0.0.51",
    "pre-commit>=3.6",
]

[dependency-groups]
lint = ["ruff", "ty"]
test = ["pytest", "pytest-cov", "pytest-mock", "pytest-xdist"]
dev = [{include-group = "lint"}, {include-group = "test"}, "pre-commit"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812",
    "ISC001",
    "PLR0913",
    "PLR0917",
    "FBT001",
    "DOC501",
    "PLW0717",
    "PLC0415",
    "B904",
    "RUF003",
    "RUF002",
    "PLR2004",
    "C901",
    "PLR0912",
    "PLR0914",
    "SIM108",
    "DTZ001",
    "PLR6104",
    "UP045",
    "UP035",
    "UP006",
    "UP007",
    "S603",
    "PLW1510",
    "BLE001",
    "S110",
    "PIE810",
    "PERF401",
    "A002",
    "DTZ005",
    "RET504",
    "Q000",
    "ANN204",
    "ANN001",
    "F541",
    "RET505",
    "E501",
]
per-file-ignores = { "tests/*" = [
    "S101", "S105", "ANN201", "ANN202", "ANN001", "ANN002", "ANN003",
    "PLR6301", "PLR2004", "PLC1901", "PLC2701", "F401", "INP001",
    "DTZ001", "FBT003", "S108",
    "SLF001", "RUF059", "ARG002", "W292", "I001",
] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
addopts = "--cov=pyhealth --cov-fail-under=40 -v --tb=short"
testpaths = ["tests"]
markers = [
    "slow = marks tests as slow",
    "integration = marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/pyhealth"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude-lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]